# MVA-IPI

./: .gitignore  README.md  RTKM_JAMAL_MARTINI.ipynb  main.py  pyproject.toml  requirements.txt
deliverables/: presentation.tex
notebooks/: 1. notebook.ipynb
presentation/: bibliography.bib  presentation.tex
report/: beamerthemesharelatex.sty  poster.tex  presentation.tex  report.tex
